Fix filter buttons not showing

--- a/app/routes/record/recordSearch/components/ActiveFilters.module.css
+++ b/app/routes/record/recordSearch/components/ActiveFilters.module.css
@@ -15,6 +15,7 @@
 .active-filters-header {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 
   h2 {
     margin-right: auto;
